--- a/qml.qrc
+++ b/qml.qrc
@@ -34,5 +34,12 @@
         <file>Components/Buttons/ShowDetailsButton.qml</file>
         <file>Components/Buttons/ShowDetailsButtonForm.ui.qml</file>
         <file>wave_long.svg</file>
+        <file>Components/Buttons/AnimatedRecordButton.qml</file>
+        <file>Components/Buttons/AnimatedRecordButtonForm.ui.qml</file>
+        <file>speech-active-3-icon.png</file>
+        <file>speech-active-2-icon.png</file>
+        <file>speech-active-1-icon.png</file>
+        <file>speech-active-0-icon.png</file>
+        <file>speech-icon.png</file>
     </qresource>
 </RCC>
